Commons (C) Black Rook Software, All rights reserved.

Slated for 2.20.0
=================

- Added: AbstractTrie<?,?,?> for implementing a Trie data structure and 
  lookup map.
- Added: Package com.blackrook.commons.trie.
- Added: Common.joinStrings(String, String... )
- Added: Common.joinStrings(int, String, String... )
- Changed: Made equality methods in sets and hashes more thorough to test for
  null combinations.
- Added/Fixed: Javadoc package names for building logger package javadocs.

Changed in 2.19.0
=================

- Changed: Reflect.createForType(...) will not convert same types to other 
  types.
- Added: Common.urlUnescape(String) for un-escaping a URL-encoded string.
- Added: Reflect.getClasses(String) for package and classpath scanning.
- Added: Reflect.getClasses(String, ClassLoader) for package and classpath 
  scanning.
- Added: AbstractMap<?,?> and changed class hierarchy that fit its policies.
  This change will not really be noticed by end-users. 
- Added: AbstractSet<?,?> and changed class hierarchy that fit its policies.
  This change will not really be noticed by end-users. 
- Changed: A method or two has been made public in order to accommodate for
  the previous changes.
- Changed: LoggerThread behavior: not daemon anymore - log flushes all pending
  log messages then waits 100ms before it dies. More log messages restart the
  thread. This ensures that all messages get logged, always.
  
Changed in 2.18.0
=================

- Added: com.blackrook.commons.logger package for logging.

Changed in 2.17.0
=================

- Requires: Java 7 or higher.
- Added: Common.parse*Array(...) methods for parsing arrays of primitives from
  strings.
- Added: Common.printBuffer(...) debug methods for printing the contents of 
  buffers, both direct and in-Java.
- Added: com.blackrook.commons.Singleton for managing and creating singleton
  instances of classes.
- Added: com.blackrook.commons.CommonTokenizer for tokenizing an average line of text.