@@ -15,7 +15,8 @@ import com.blackrook.commons.list.List;
 public abstract class AbstractTrie<V extends Object, S extends Object> implements AbstractSet<V>, Sizable
 {
 	/** Root Node. */
-	private Node<V, S> root;
+	protected Node<V, S> root;
+	
 	/** Current size. */
 	private int size;
 
@@ -44,9 +45,9 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 	 * @param out the output list.
 	 * @return the amount of items returned into the list.
 	 */
-	public int getPrevious(V value, List<V> out)
+	public int getBefore(V value, List<V> out)
 	{
-		return getPrevious(value, out, out.size());
+		return getBefore(value, out, out.size());
 	}
 	
 	/**
@@ -59,7 +60,7 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 	 * @param startOffset the starting offset into the list to set values.
 	 * @return the amount of items returned into the list.
 	 */
-	public int getPrevious(V value, List<V> out, int startOffset)
+	public int getBefore(V value, List<V> out, int startOffset)
 	{
 		Result<V, S> result = search(value, true, false);
 		int added = 0;
@@ -77,9 +78,9 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 	 * @param out the output list.
 	 * @return the amount of items returned into the list.
 	 */
-	public int getDescendants(V value, List<V> out)
+	public int getAfter(V value, List<V> out)
 	{
-		return getDescendants(value, out, out.size());
+		return getAfter(value, out, out.size());
 	}
 
 	/**
@@ -93,7 +94,7 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 	 * @param startOffset the starting offset into the list to set values.
 	 * @return the amount of items returned into the list.
 	 */
-	public int getDescendants(V value, List<V> out, int startOffset)
+	public int getAfter(V value, List<V> out, int startOffset)
 	{
 		Result<V, S> result = search(value, false, true);
 		int added = 0;
@@ -103,13 +104,28 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 	}
 	
 	/**
-	 * Returns the last-encountered value down a trie search.
-	 * This is the remainder of the segments generated by the key from the last-matched
+	 * Returns the last-encountered value down a trie search, plus
+	 * the remainder of the segments generated by the key from the last-matched
 	 * segment.
 	 * @param value the value to search for.
-	 * @return the segment remainder.
+	 * @param out the output list.
+	 * @return the last-encountered value.
 	 */
-	public V getValueWithRemainder(V value, List<S> out, int startOffset)
+	public V getWithRemainder(V value, List<S> out)
+	{
+		return getWithRemainder(value, out, 0);
+	}
+
+	/**
+	 * Returns the last-encountered value down a trie search, plus
+	 * the remainder of the segments generated by the key from the last-matched
+	 * segment.
+	 * @param value the value to search for.
+	 * @param out the output list.
+	 * @param startOffset the starting offset into the list to set values.
+	 * @return the last-encountered value.
+	 */
+	public V getWithRemainder(V value, List<S> out, int startOffset)
 	{
 		Result<V, S> result = search(value, true, false);
 		
@@ -119,8 +135,8 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 		}
 		else
 		{
-			for (int i = result.moves; i < result.segments.length; i++)
-				out.replace(startOffset + (i - result.moves), result.segments[i]);
+			for (int i = result.movesToLastEncounter; i < result.segments.length; i++)
+				out.replace(startOffset + (i - result.movesToLastEncounter), result.segments[i]);
 			
 			return result.encounteredValues.getByIndex(result.encounteredValues.size() - 1);
 		}
@@ -162,12 +178,7 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 	public boolean remove(V object)
 	{
 		S[] segments = getSegments(object);
-		if (removeRecurse(object, root, segments, 0))
-		{
-			size--;
-			return true;
-		}
-		return false; 
+		return removeRecurse(object, root, segments, 0) != null; 
 	}
 	
 	@Override
@@ -221,18 +232,22 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 		S[] segments = getSegments(value);
 		List<V> encountered = includeEncountered ? new List<V>() : null;
 		List<V> descending = includeDescendants ? new List<V>() : null;
-		int segindex = 0;
+		int encIndex = -1;
+		int segIndex = 0;
 		
 		Node<V, S> current = root;
-		while (segindex < segments.length && current.hasEdges())
+		while (segIndex < segments.length && current.hasEdges())
 		{
 			if (encountered != null && current.value != null)
-				encountered.add(current.value);
-				
-			if (current.edgeMap.containsKey(segments[segindex]))
 			{
-				current = current.edgeMap.get(segments[segindex]);
-				segindex++;
+				encountered.add(current.value);
+				encIndex = segIndex;
+			}
+				
+			if (current.edgeMap.containsKey(segments[segIndex]))
+			{
+				current = current.edgeMap.get(segments[segIndex]);
+				segIndex++;
 			}
 			else
 				break;
@@ -242,12 +257,46 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 			getDescendantsRecurse(current, descending);
 		
 		return new Result<V, S>(
-			equalityMethod(value, current.value) ? value : null,
+			equalityMethod(value, current.value) ? current.value : null,
 			encountered,
 			descending,
 			segments,
-			segindex
+			encIndex,
+			segIndex
 		);
+	}
+
+	/**
+	 * Recurses through the trie for an object and removes it, cleaning up empty
+	 * nodes in the way back. 
+	 * @param object the object to look for.
+	 * @param node the starting node.
+	 * @return true if any removal occurred down the tree, false if not.
+	 */
+	V removeRecurse(V object, Node<V, S> node, S[] segments, int sidx)
+	{
+		V out = null;
+	
+		if (equalityMethod(node.value, object))
+		{
+			out = node.value;
+			node.value = null;
+			size--;
+			return out;
+		}
+		
+		Node<V, S> next = node.edgeMap.get(segments[sidx]);
+		if (next == null)
+			return null;
+		
+		if ((out = removeRecurse(object, next, segments, sidx + 1)) == null)
+		{
+			if (next != root && next.isExpired())
+				node.edgeMap.removeUsingKey(segments[sidx]);
+			return out;
+		}
+		else
+			return null;
 	}
 
 	/**
@@ -261,35 +310,6 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 		
 		for (ObjectPair<S, Node<V, S>> pair : start.edgeMap)
 			getDescendantsRecurse(pair.getValue(), accum);
-	}
-
-	/**
-	 * Recurses through the trie for an object and removes it, cleaning up empty
-	 * nodes in the way back. 
-	 * @param object the object to look for.
-	 * @param node the starting node.
-	 * @return true if any removal occurred down the tree, false if not.
-	 */
-	private boolean removeRecurse(V object, Node<V, S> node, S[] segments, int sidx)
-	{
-		if (equalityMethod(node.value, object))
-		{
-			node.value = null;
-			return true;
-		}
-		
-		Node<V, S> next = node.edgeMap.get(segments[sidx]);
-		if (next == null)
-			return false;
-		
-		if (removeRecurse(object, next, segments, sidx + 1))
-		{
-			if (next != root && next.isExpired())
-				node.edgeMap.removeUsingKey(segments[sidx]);
-			return true;
-		}
-		else
-			return false;
 	}
 
 	/**
@@ -358,14 +378,16 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 		private List<V> encounteredValues;
 		private List<V> remainderValues;
 		private S[] segments;
+		private int movesToLastEncounter;
 		private int moves;
 		
-		Result(V found, List<V> encountered, List<V> remainder, S[] segments, int moves)
+		Result(V found, List<V> encountered, List<V> remainder, S[] segments, int movesToLastEncounter, int moves)
 		{
 			this.foundValue = found;
 			this.encounteredValues = encountered;
 			this.remainderValues = remainder;
 			this.segments = segments;
+			this.movesToLastEncounter = movesToLastEncounter;
 			this.moves = moves;
 		}
 		
@@ -402,6 +424,14 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 		}
 		
 		/**
+		 * Returns how many moves it took to find the last encountered object in a search.
+		 */
+		public int getMovesToLastEncounter()
+		{
+			return movesToLastEncounter;
+		}
+		
+		/**
 		 * Returns how many edge hops that this performed in order to reach the result.
 		 */
 		public int getMoveCount() 
@@ -425,7 +455,7 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 	/**
 	 * A single node in the Trie.
 	 */
-	private static class Node<V, S>
+	protected static class Node<V, S>
 	{
 		/** Edge map. */
 		private AbstractMap<S, Node<V, S>> edgeMap;
@@ -438,18 +468,32 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 			value = null;
 		}
 		
+		void deleteValue()
+		{
+			this.value = null;
+		}
+		
 		/**
 		 * Returns this node's value.
 		 */
-		public V getValue()
+		V getValue()
 		{
 			return value;
 		}
 		
 		/**
+		 * Returns the edge map.
+		 * @return
+		 */
+		AbstractMap<S, Node<V, S>> getEdgeMap()
+		{
+			return edgeMap;
+		}
+		
+		/**
 		 * Returns if this node can be cleaned up.
 		 */
-		public boolean isExpired()
+		boolean isExpired()
 		{
 			return edgeMap.isEmpty() && value == null;
 		}
@@ -457,7 +501,7 @@ public abstract class AbstractTrie<V extends Object, S extends Object> implement
 		/**
 		 * Returns if the node has possible paths.
 		 */
-		public boolean hasEdges()
+		boolean hasEdges()
 		{
 			return !edgeMap.isEmpty();
 		}
