@@ -69,9 +69,9 @@ public abstract class AbstractTrieMap<K extends Object, V extends Object, S exte
 	 * @param startOffset the starting offset into the list to set values.
 	 * @return the amount of items returned into the list.
 	 */
-	public int getPreviousValuesByKey(K key, List<V> out)
+	public int getBeforeKey(K key, List<V> out)
 	{
-		return getPreviousValuesByKey(key, out, out.size());
+		return getBeforeKey(key, out, out.size());
 	}
 	
 	/**
@@ -84,7 +84,7 @@ public abstract class AbstractTrieMap<K extends Object, V extends Object, S exte
 	 * @param startOffset the starting offset into the list to set values.
 	 * @return the amount of items returned into the list.
 	 */
-	public int getPreviousValuesByKey(K key, List<V> out, int startOffset)
+	public int getBeforeKey(K key, List<V> out, int startOffset)
 	{
 		Result<ObjectPair<K, V>, S> result = searchByKey(key, true, false);
 		int added = 0;
@@ -102,9 +102,9 @@ public abstract class AbstractTrieMap<K extends Object, V extends Object, S exte
 	 * @param out the output list.
 	 * @return the amount of items returned into the list.
 	 */
-	public int getDescendantValuesByKey(K key, List<V> out)
+	public int getAfterKey(K key, List<V> out)
 	{
-		return getDescendantValuesByKey(key, out, out.size());
+		return getAfterKey(key, out, out.size());
 	}
 
 	/**
@@ -118,7 +118,7 @@ public abstract class AbstractTrieMap<K extends Object, V extends Object, S exte
 	 * @param startOffset the starting offset into the list to set values.
 	 * @return the amount of items returned into the list.
 	 */
-	public int getDescendantValuesByKey(K key, List<V> out, int startOffset)
+	public int getAfterKey(K key, List<V> out, int startOffset)
 	{
 		Result<ObjectPair<K, V>, S> result = searchByKey(key, false, true);
 		int added = 0;
@@ -132,9 +132,24 @@ public abstract class AbstractTrieMap<K extends Object, V extends Object, S exte
 	 * This is the remainder of the segments generated by the key from the last-matched
 	 * segment.
 	 * @param key the key to search for.
-	 * @return the segment remainder.
+	 * @param out the output list.
+	 * @return the last-encountered value.
 	 */
-	public V getValueWithRemainderByKey(K key, List<S> out, int startOffset)
+	public V getWithRemainderByKey(K key, List<S> out)
+	{
+		return getWithRemainderByKey(key, out, 0);
+	}
+
+	/**
+	 * Returns the last-encountered value down a trie search.
+	 * This is the remainder of the segments generated by the key from the last-matched
+	 * segment.
+	 * @param key the key to search for.
+	 * @param out the output list.
+	 * @param startOffset the starting offset into the list to set values.
+	 * @return the last-encountered value.
+	 */
+	public V getWithRemainderByKey(K key, List<S> out, int startOffset)
 	{
 		Result<ObjectPair<K, V>, S> result = searchByKey(key, true, false);
 		
@@ -144,10 +159,115 @@ public abstract class AbstractTrieMap<K extends Object, V extends Object, S exte
 		}
 		else
 		{
-			for (int i = result.getMoveCount(); i < result.getSegments().length; i++)
-				out.replace(startOffset + (i - result.getMoveCount()), result.getSegments()[i]);
+			for (int i = result.getMovesToLastEncounter(); i < result.getSegments().length; i++)
+				out.replace(startOffset + (i - result.getMovesToLastEncounter()), result.getSegments()[i]);
 			
 			return result.getEncounteredValues().getByIndex(result.getEncounteredValues().size() - 1).getValue();
+		}
+	}
+
+	/**
+	 * Returns all keys in the order that they are found on the way through the Trie searching for a
+	 * particular matching key. Result may include the provided key.
+	 * <p>The results are set in the output list provided by the user - an offset before
+	 * the end of the list replaces, not adds!
+	 * @param key the key to search for.
+	 * @param out the output list.
+	 * @param startOffset the starting offset into the list to set values.
+	 * @return the amount of items returned into the list.
+	 */
+	public int getKeysBeforeKey(K key, List<K> out)
+	{
+		return getKeysBeforeKey(key, out, out.size());
+	}
+
+	/**
+	 * Returns all keys in the order that they are found on the way through the Trie searching for a
+	 * particular matching key. Result may include the the provided key.
+	 * <p>The results are set in the output list provided by the user - an offset before
+	 * the end of the list replaces, not adds!
+	 * @param key the key to search for.
+	 * @param out the output list.
+	 * @param startOffset the starting offset into the list to set keys.
+	 * @return the amount of items returned into the list.
+	 */
+	public int getKeysBeforeKey(K key, List<K> out, int startOffset)
+	{
+		Result<ObjectPair<K, V>, S> result = searchByKey(key, true, false);
+		int added = 0;
+		for (ObjectPair<K, V> pair : result.getEncounteredValues())
+			out.replace(startOffset + (added++), pair.getKey());
+		return added;
+	}
+
+	/**
+	 * Returns all keys descending from the end of a search for a
+	 * particular key. Result may include the provided key. 
+	 * <p>The keys returned may not be returned in any consistent or stable order.
+	 * <p>The results are added to the end of the list.
+	 * @param key the key to search for.
+	 * @param out the output list.
+	 * @return the amount of items returned into the list.
+	 */
+	public int getKeysAfterKey(K key, List<K> out)
+	{
+		return getKeysAfterKey(key, out, out.size());
+	}
+
+	/**
+	 * Returns all keys descending from the end of a search for a
+	 * particular key. Result may include the provided key. 
+	 * <p>The keys returned may not be returned in any consistent or stable order.
+	 * <p>The results are set in the output list provided by the user - an offset before
+	 * the end of the list replaces, not adds!
+	 * @param key the key to search for.
+	 * @param out the output list.
+	 * @param startOffset the starting offset into the list to set keys.
+	 * @return the amount of items returned into the list.
+	 */
+	public int getKeysAfterKey(K key, List<K> out, int startOffset)
+	{
+		Result<ObjectPair<K, V>, S> result = searchByKey(key, false, true);
+		int added = 0;
+		for (ObjectPair<K, V> pair : result.getDescendantValues())
+			out.replace(startOffset + (added++), pair.getKey());
+		return added;
+	}
+
+	/**
+	 * Returns the last-encountered key down a trie search, plus
+	 * the remainder of the segments generated by the key from the last-matched segment.
+	 * @param key the key to search for.
+	 * @param out the output list.
+	 * @return the last-encountered value.
+	 */
+	public K getKeyWithRemainderByKey(K key, List<S> out)
+	{
+		return getKeyWithRemainderByKey(key, out, 0);
+	}
+
+	/**
+	 * Returns the last-encountered key down a trie search, plus
+	 * the remainder of the segments generated by the key from the last-matched segment.
+	 * @param key the key to search for.
+	 * @param out the output list.
+	 * @param startOffset the starting offset into the list to set keys.
+	 * @return the last-encountered value.
+	 */
+	public K getKeyWithRemainderByKey(K key, List<S> out, int startOffset)
+	{
+		Result<ObjectPair<K, V>, S> result = searchByKey(key, true, false);
+		
+		if (result.getFoundValue() != null)
+		{
+			return result.getFoundValue().getKey();
+		}
+		else
+		{
+			for (int i = result.getMovesToLastEncounter(); i < result.getSegments().length; i++)
+				out.replace(startOffset + (i - result.getMovesToLastEncounter()), result.getSegments()[i]);
+			
+			return result.getEncounteredValues().getByIndex(result.getEncounteredValues().size() - 1).getKey();
 		}
 	}
 
@@ -164,13 +284,24 @@ public abstract class AbstractTrieMap<K extends Object, V extends Object, S exte
 	@Override
 	public V removeUsingKey(K key)
 	{
-		// TODO Auto-generated method stub
-		return null;
+		ObjectPair<K, V> p = new ObjectPair<K, V>(key, null);
+		S[] segments = getSegments(p);
+		if ((p = removeRecurse(p, root, segments, 0)) != null)
+		{
+			return p.getValue();
+		}
+		return null; 
 	}
 
 	@Override
 	public final boolean equalityMethod(ObjectPair<K, V> object1, ObjectPair<K, V> object2)
 	{
+		if (object1 == null && object2 != null)
+			return false;
+		else if (object1 != null && object2 == null)
+			return false;
+		else if (object1 == null && object2 == null)
+			return true;
 		return equalityMethodForKey(object1.getKey(), object2.getKey());
 	}
 
